Fix mainSection display at 550px screen width
It was overflowing on the right, and creating horizontal scroll.
Fixes fd64cb919211af6bc5f6f3885cacc9960064d41c.

--- a/src/components/Layout/index.module.css
+++ b/src/components/Layout/index.module.css
@@ -13,7 +13,6 @@
 }
 
 .mainSection {
-  display: flex;
   width: 100%;
 }
 
